--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,18 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation('junit:junit:4.13')
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 }
 
 sourceCompatibility=1.8
+targetCompatibility=1.8
+
+tasks.withType(Test){
+    scanForTestClasses = false
+    include "**/*Test.class"
+}
 
 task 'create-dirs' {
     doLast {
