--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@
 ### Gradle template
 
 
-.idea
-.gradle
-/build/
+java/.idea
+java/.gradle
+java/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
